--- a/code-along.html
+++ b/code-along.html
@@ -16,10 +16,11 @@
     Write out the <a> tag including the href attribute. For the content, put 
     the title of the favorite movie of someone in the class. Don't worry about 
     the link for now! -->
-
+<a href="https://en.wikipedia.org/wiki/Cars_(film)">Cars </a>
+  <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Lightning_McQueen.png"> 
 
     <!-- 2. Search the movie on Google and go to the IMBD or Wiki page. Put 
-        this link for the href attribute. -->
+        this link for the href attribute. --> 
 
     <!-- 3. Now let's add an image of the movies. Write out the <img> tag 
         including the src attribute. Find an image that you want to use from
